Version Next

    - Add PersistentObject support for JTA/XA transactions
    - Fixed bug causing class-level @RetryTransaction annotations to not be found

Version 1.0.925 Released September 16, 2014

    - Added JPASchemaGeneratorTask and HibernateDDLFormatterTask ant tasks
    - Rewrote PersistentObjectTransactionManager as a Spring PlatformTransactionManager;
      removed obsolete @PersistentObjectTransactional and associated AOP aspect
    - Removed arcane @ThreadConfigurable and @ThreadTransactional nobody was using
      NOTE: the above are backward-incompatible changes
    - Added PersistentConnection and PersistentSocketConnection
    - Added IdleTimeoutInputStream.checkConnection()
    - Update to Spring 4.0.x

Version 1.0.905 Released July 29, 2014

    - Improvements relating to serialization and HTTP sessions with Vaadin 7
    - Changed VaadinConfigurable.ifSessionNotLocked default to EXCEPTION
    - Fixed VaadinUtil.invokeLater() to run immediately from background
    - Revert previous change to VaadinUtil.invokeLater() (issue #19)
    - Fix bug in Primitive.FLOAT and Primitive.LONG parse pattern
    - Added ParseContext.tryPattern(), equals(), and hashCode()
    - Added Primitive.forName()

Version 1.0.882 Released May 6, 2014

    - Moved XMLResultSetWriter from xml -> sql sub-package
    - Remove HardLink; obsoleted by Files.createLink()
    - Remove unnecessary parameter to VaadinApplicationListener
      NOTE: the above are backward-incompatible changes
    - Fix bug: VaadinUtil.invokeLater() was sometimes synchronous
    - Allow container SimpleItem's to be modified from "below"
    - Added StreamWriterAction
    - Added Connectable
    - Minor bug fixes

Version 1.0.850 Released March 19, 2014

    - Update build target to Java 7
    - Added Primitive.parsePattern(), Primitive.compare(), and Primitive.VOID
    - Genericize Primitive (no longer extend Enum)
    - DoubleFormat removed; use Primitive.DOUBLE instead